[gd_scene load_steps=8 format=3 uid="uid://dt3qlalqvxe4b"]

[ext_resource type="Script" uid="uid://3lct00ja11lx" path="res://platformer/scripts/enemy.gd" id="1_4gyqm"]
[ext_resource type="SpriteFrames" uid="uid://dlnudyh70njeu" path="res://platformer/enemy.tres" id="2_qi2p4"]
[ext_resource type="AudioStream" uid="uid://dch8da0o2ycs4" path="res://sound-music/enemydie.wav" id="3_ddb41"]
[ext_resource type="AudioStream" uid="uid://bu6k2vrxxb063" path="res://sound-music/hitHurt.wav" id="4_mxvvd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_te1r2"]
size = Vector2(22, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ddb41"]
size = Vector2(6.21342, 1.9083)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxvvd"]
size = Vector2(24, 13)

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_4gyqm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_te1r2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.69407e-21, -6)
scale = Vector2(1.5, 1.41667)
sprite_frames = ExtResource("2_qi2p4")
animation = &"chase"
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -6.5)
scale = Vector2(2.73601, 2.62013)
shape = SubResource("RectangleShape2D_ddb41")

[node name="hurt" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_mxvvd")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ddb41")

[node name="hurt2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mxvvd")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="hurt" to="." method="_on_hurt_body_entered"]
